@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize "2"
class CreateClientUI{
}

enum roles extends User{

}


class ClientRepository {
    - Repositories()
    + getInstance() : Repositories
    + getClientRepository()
}

class User{
   - name
   - descriptions
   - tax number
   - address
   - email address
   - phone number
   - password
   - roles
}
class Client extends User{
}
class CreateClientController{
}


CreateClientUI .> CreateClientController
CreateClientController .> Repositories : repositories
Repositories "1" --> "*" ClientRepository : has >
ClientRepository "1" --> "*" Client : has >

@enduml